--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Run sort.bat with TAG
         run: |
+          tree /f
+          .\sort.bat ${{ github.event.inputs.TAG }}
           sort.bat ${{ github.event.inputs.TAG }}
 
       - name: Calculate SHA256 checksum
